--- a/style.css
+++ b/style.css
@@ -19,11 +19,12 @@ body {
 
 .container {
   text-align: center;
-  width: 350px;
+  height: 100vh;
+  width: 100%;
   background-color: #4E5255;
   border-radius: 20px;
   /* box-shadow: 5px 5px 20px 12px rgba(0,0,0,0.22); */
-  padding: 0 40px;
+  padding: 30px 40px;
 }
 
 .shift-out-container {
