--- a/style.css
+++ b/style.css
@@ -110,17 +110,17 @@ body {
   margin: 20px auto;
   color: #fff;
   text-align: right;
-  font-size: 45px;
+  font-size: 50px;
   margin-bottom: 40px;
 }
 
 .display-list {
   margin: 0 auto;
   width: 100%;
-  height: 100px;
+  height: 200px;
   text-align: right;
   color: #A2A7AB;
-  font-size: 20px;
+  font-size: 25px;
   /* border: 1px solid #fff; */
 }
 
@@ -136,11 +136,13 @@ body {
   color: #fff;
   /* border: 1px solid #fff; */
   text-align: right;
+  font-size: 20px;
 }
 
 
 /* Calc buttons container (grid) */
 .calc-tabs {
+  /* margin-top: 100px; */
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
