--- a/style.css
+++ b/style.css
@@ -151,12 +151,12 @@ body {
 
 .tab {
   padding: 17px 10px;
-  transition: .3s;
+  transition: .1s;
   font-size: 25px;
 }
 
 
-.tab:hover {
+.tab:active {
   background-color: rgb(138, 118, 118);
   color: rgb(244, 248, 135);
 }
