--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ body {
   margin: 20px auto;
   color: #fff;
   text-align: right;
-  font-size: 50px;
+  font-size: 48px;
   margin-bottom: 40px;
 }
 
@@ -120,7 +120,7 @@ body {
   height: 190px;
   text-align: right;
   color: #A2A7AB;
-  font-size: 25px;
+  font-size: 22px;
   /* border: 1px solid #fff; */
 }
 
@@ -151,7 +151,7 @@ body {
 
 .tab {
   padding: 17px 10px;
-  transition: .1s;
+  /* transition: .1s; */
   font-size: 25px;
 }
 
