--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ input {
   color: #fff;
   background-color: #4E5255;
   border: none;
-  border-bottom: 1px solid #fff;
+  /* border-bottom: 1px solid #fff; */
   font-size: 16px;
 }
 
