--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
   width: 100%;
   background-color: #4E5255;
   border-radius: 20px;
-  /* box-shadow: 5px 5px 20px 12px rgba(0,0,0,0.22); */
   padding: 30px 20px;
 }
 
@@ -36,12 +35,11 @@ body {
 .container-list {
   display: none;
   text-align: center;
-  width: 350px;
-  height: 620px;
+  height: 100vh;
+  width: 100%;
   background-color: #4E5255;
   border-radius: 20px;
-  box-shadow: 5px 5px 20px 12px rgba(0,0,0,0.22);
-  padding: 0 40px;
+  padding: 30px 20px;
   transform: translateX(100%);
 }
 
