--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   padding: 30px 20px;
   transition: .7s;
 
-  /* display: none; */
+  display: none;
 }
 
 .shift-out-container {
@@ -52,7 +52,7 @@ body {
 
 /* КОНТЕЙНЕР СПИСКА ВСЕХ СОБЫТИЙ */
 .container-allList {
-  display: none;
+  display: block;
   text-align: left;
   height: 100vh;
   width: 100%;
